test/cli/test-validating-policy/checks/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-team-label
  labels:
    app: myapp
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: with-team-label
  labels:
    app: myapp
    team: platform
spec:
  containers:
    - name: nginx
      image: nginx:latest
